--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=redemption
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Imma@1995
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -64,3 +64,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
