--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
         "ext-dom": "*",
         "africc/php-epp2": "^2.0",
         "cknow/laravel-money": "^8.3.1",
+        "darryldecode/cart": "^4.2",
+        "jantinnerezo/livewire-alert": "^4.0",
         "laravel/framework": "^11.44.0",
         "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6",
         "opcodesio/log-viewer": "^3.15"
     },
     "require-dev": {
