--- a/composer.json
+++ b/composer.json
@@ -13,23 +13,24 @@
         "ext-dom": "*",
         "africc/php-epp2": "^2.0",
         "cknow/laravel-money": "^8.4.0",
-        "darryldecode/cart": "^4.2",
-        "laravel/framework": "^11.16.0",
+        "darryldecode/cart": "^4.2.5",
+        "laravel/framework": "^11.45.1",
+        "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6.3",
-        "opcodesio/log-viewer": "^3.15.5"
+        "opcodesio/log-viewer": "^3.18.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24.1",
-        "laravel/breeze": "^2.3.6",
-        "laravel/pail": "^1.2.2",
-        "laravel/pint": "^1.22",
-        "laravel/sail": "^1.41.1",
+        "laravel/breeze": "^2.3.7",
+        "laravel/pail": "^1.2.3",
+        "laravel/pint": "^1.22.1",
+        "laravel/sail": "^1.43.1",
         "mockery/mockery": "^1.6.12",
-        "nunomaduro/collision": "^8.8.0",
-        "pestphp/pest": "^3.8",
+        "nunomaduro/collision": "^8.8.2",
+        "pestphp/pest": "^3.8.2",
         "pestphp/pest-plugin-laravel": "^3.2",
-        "rector/rector": "^2.0.12"
+        "rector/rector": "^2.1.0"
     },
     "autoload": {
         "psr-4": {
