--- a/.env.example
+++ b/.env.example
@@ -48,13 +48,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_SCHEME=null
-MAIL_HOST=smtp.hostinger.com
-MAIL_PORT=465
-MAIL_USERNAME=hello@jtalkdev.com
-MAIL_PASSWORD="$s8Cg.1'P~1EaV7b4O"
-MAIL_FROM_ADDRESS="hello@jtalkdev.com"
+MAIL_MAILER=
+MAIL_SCHEME=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -65,7 +65,15 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+NIGHTWATCH_TOKEN=
+NIGHTWATCH_REQUEST_SAMPLE_RATE=
+
+EPP_HOST=
+EPP_USERNAME=
+EPP_PASSWORD=
+EPP_PORT=
+EPP_SSL=
+
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 RECAPTCHA_MIN_SCORE=
-
