--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "opcodesio/log-viewer": "^3.18.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.24.1",
         "laravel/breeze": "^2.3.7",
         "laravel/pail": "^1.2.3",
